# simple-network-anomaly-detector

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
