[tool.poetry]
name = "simple-network-anomaly-detector"
version = "0.1.0"
description = ""
authors = ["Tharindu Wickramasinghe <tharinduwjh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
joblib = "1.4.2"
numpy = "2.1.2"
prettytable = "3.11.0"
psutil = "6.1.0"
scikit-learn = "1.5.2"
scipy = "1.14.1"
threadpoolctl = "3.5.0"
wcwidth = "0.2.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
